[package]
name = "regular_expressions"
version = "0.1.0"
authors = ["tqma <tqma@trip.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "regexp"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
proc-macro2 = "1.0"
quote = "1"
lazy_static = "1.4.0"
rustc-hash = "1.1.0"

[profile.release]
debug = true
